--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
-	"jest": "^29.3.1",
-	"@types/jest": "^29.2.5"
+    "@types/jest": "^29.2.5",
+    "jest": "^29.3.1"
   },
   "scripts": {
-	"test": "jest"
+    "test": "jest"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
